--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ header{
 .telefone{
     width: 100%;
     height: 800px;
-    background-image: url(../img/henry-co-fhT1fqukEK8-unsplash.jpg-1.jpg);
+    background-image: url(../img/Pao4.jpg);
 }
 
 .telefone .background{
